...
import { Text, Alert, FlatList, View, StyleSheet } from 'react-native';
import { connect } from 'react-redux';
import { DropDownAlertStyles, styles, Theme, statusbarMargin } from '../../theme';
import { SettingsList } from '../../components/cards/SettingsList';
import DropdownAlert from 'react-native-dropdownalert';
import { NavigationScreenProp, NavigationRoute } from 'react-navigation';
import Account from '../../components/parts/Account';
import { Header } from 'react-native-elements';
import { onPressLogoutAsync } from '../../utils';

interface Props {
  navigation: NavigationScreenProp<NavigationRoute<any>>;
  logoutUserHandler: any;
...
        title: 'Version',
        subtitle: '1.0.1',

        onPress: () => {}
      },
      {
        title: 'Logout',
        onPress: () => {
          onPressLogoutAsync();
        }
      }
    ];
    return (
...
