...
const AppIntroScreen: React.FC<Props> = (props: Props) => {
  const navigateToAuth = () => {
    const { navigation } = props;
    navigation.navigate('PhoneAuth');
  };

  const nextButton = () => <Button testID="nextButton">Next</Button>;

  const skipButton = () => <Button onPress={() => appIntroSliderRef.goToSlide(2)}>Skip</Button>;

  const doneButton = () => (
    <Button testID="doneButton" onPress={navigateToAuth}>
      Done
    </Button>
  );

  const renderScreens = (props: { title?: any; text?: any; image?: any }) => {
...
