...
            handleTextChange={async (value: string) => {
              this.setState({ otp: value });
            }}
          />
          {/* <Text>{JSON.stringify(this.state)}</Text> */}
          <Button
            testID="submitButton_1"
            onPress={this.handleSubmit}
            title={'Submit'}
            type={'solid'}
            activeOpacity={activeOpacity}
            containerStyle={{ marginTop: Layout.window.height / 6, borderRadius: 0, marginLeft: 20, marginRight: 20 }}
            buttonStyle={{ backgroundColor: Theme.darkText }}
...
